--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# MacOS Unwanted files:
+.DS_Store
+
+#VSCode unwanted files:
+*.vscode
