--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.dev]
+debug = true
+
+[profile.release]
+debug = false
+
 [dependencies]
 image = "0.24.6"
 tokio = "1.29.1"
@@ -13,3 +19,6 @@ tokio = "1.29.1"
 arbitrary = "1.3.0"
 test-case = "3.1.0"
 mockall = "0.11.4"
+
+[features]
+debug_assertions = []
