--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 homepage = "https://jaspervaldivia.dev"
 repository = "https://github.com/jasval/burnt_chroma"
 license = "Apache-2.0"
-license-file = "LICENSE.txt"
+license-file = "LICENSE"
 keywords = ["anamorphic", "image", "desqueeze", "stretch"]
 categories = ["multimedia::images", "multimedia", "graphics", "command-line-utilities", "external-ffi-bindings"]
+include = ["src/**/*", "LICENSE", "README.md", "!**/*.jpeg"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
