--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ keywords = ["anamorphic", "image", "desqueeze", "stretch"]
 categories = ["multimedia::images", "multimedia", "graphics", "command-line-utilities", "external-ffi-bindings"]
 exclude = ["src/tests"]
 
+[lib]
+name= "burnt_chroma"
+crate-type = ["staticlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.dev]
@@ -20,9 +24,13 @@ debug = true
 [profile.release]
 debug = false
 
+[build-dependencies]
+swift-bridge-build = "0.1"
+
 [dependencies]
 image = "0.24.6"
 tokio = "1.29.1"
+swift-bridge = "0.1"
 
 [dev-dependencies]
 arbitrary = "1.3.0"
