--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ debug = true
 
 [profile.release]
 debug = false
+opt-level = 'z'     # Optimize for size
+lto = true          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = 'abort'     # Abort on panic
+strip = true        # Strip symbols from binary*
 
 [build-dependencies]
 swift-bridge-build = "0.1"
@@ -32,7 +37,6 @@ tokio = { version = "1.29.1", features = ["macros"] }
 swift-bridge = { version = "0.1.52", features = ["async"] }
 
 [dev-dependencies]
-arbitrary = "1.3.0"
 
 [features]
 debug_assertions = []
