--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,12 @@ exclude = ["src/tests"]
 
 [lib]
 name= "burnt_chroma"
-crate-type = ["staticlib", "cdylib"]
+crate-type = ["cdylib", "staticlib"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
 
 [profile.release]
 debug = false
@@ -31,10 +34,16 @@ uniffi = { version = "0.24.3", features = ["build"] }
 [dependencies]
 image = "0.24.6"
 tokio = { version = "1.29.1", features = ["full"] }
-uniffi = "0.24.3"
+uniffi = { version = "0.24.3", features = ["cli"] }
 prost = "0.11.9"
 
 [dev-dependencies]
 
 [features]
 debug_assertions = []
+
+
+[package.metadata.swiftpackage]
+name = "BurntChroma"
+platforms = ["ios", "macos"]
+version = "0.1.0"
