--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ image = "0.24.6"
 tokio = { version = "1.29.1", features = ["full"] }
 uniffi = { version = "0.24.3", features = ["cli"] }
 prost = "0.11.9"
+thiserror = "1.0.44"
 
 [dev-dependencies]
 
