Create package with xcframework as a binary target

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["multimedia::images", "multimedia", "graphics", "command-line-util
 exclude = ["src/tests"]
 
 [lib]
-name= "burnt_chroma"
-crate-type = ["staticlib"]
+crate-type = ["cdylib", "staticlib"]
+name = "burnt_chroma"
 
 [[bin]]
 # This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
